--- a/BancoPichincha/banco_pichincha_frontend/src/App.css
+++ b/BancoPichincha/banco_pichincha_frontend/src/App.css
@@ -9,23 +9,11 @@ body {
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f5f5f5;
+  background-color: #f5f7fa;
 }
 
 .App {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-.main-content {
-  flex: 1;
-  padding-top: 20px;
-  padding-bottom: 40px;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 /* Estilos globales para botones */
