Implementar validación de cédula y creación de cuentas de ahorro en el sistema

--- a/BancoPichincha/banco_pichincha_frontend/src/components/Login.css
+++ b/BancoPichincha/banco_pichincha_frontend/src/components/Login.css
@@ -100,7 +100,7 @@
 html, body, .login-page {
   height: 100%;
   margin: 0;
-  /*overflow: hidden;  Prohíbe el scroll vertical */
+  overflow: hidden; /* Prohíbe el scroll vertical */
 }
 
 .login-page {
