--- a/BancoPichincha/banco_pichincha_frontend/src/components/Dashboard.css
+++ b/BancoPichincha/banco_pichincha_frontend/src/components/Dashboard.css
@@ -77,6 +77,15 @@
   font-size: 12px;
   color: #00377B;
   cursor: pointer;
+  transition: all 0.2s;
+  text-decoration: underline;
+  text-decoration-color: transparent;
+}
+
+.user-link:hover {
+  color: #FFD100;
+  text-decoration-color: #FFD100;
+  transform: translateX(2px);
 }
 
 .sidebar-nav {
